# tap-xero

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py  tox.ini
tap_xero/: __init__.py  client.py  streams.py  transform.py
tap_xero/schemas/: budgets.json  line_items.json  payroll_employees_au.json  payroll_employees_uk.json  payroll_payitems_au.json  payroll_payruns_au.json  payroll_timesheets_au.json  payroll_timesheets_uk.json  profit_and_loss.json  reports_bank_summary.json  reports_profit_and_loss.json  reports_profit_and_loss_by_category.json
tests/: test_archived_contacts_support.py
tests/unittests/: test_archived_contacts_support.py  test_exception_handling.py
